<resources>
    <string name="app_name">RecyclerUdacity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share</string>
    <string name="comment">Comment</string>
    <string name="like">Like</string>
    <string name="author">Author</string>
    <string name="content">Content</string>
</resources>